# Eliotopy-v2

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
libs/unity6/: README.md  Resolve6.hpp
libs/unity6/Analysis/Algorithms/: 01_GomScan.md  02_MsIdScan.md  03_ObjectEnumeration.md  04_TransformWorldPosition.md  05_WorldToScreen.md  06_GomTraversal.md  07_ValidateOffsets.md  08_GomHashBucketValidate.md  09_GomWalkerAndSearch.md  10_InitContextAndWrappers.md  11_MetadataScanAndExport.md  12_MetadataHintAndRegistrationScan.md  13_DumpSdk6.md  14_Bones_TransformSubtree.md  15_GomHashCalc.md  16_FindObjectsOfTypeAll.md  17_MsIdToPointerRead.md  18_FindMainCamera.md
libs/unity6/Analysis/Structures/: 01_Offsets.md  02_GomOffsets.md  03_MsIdStructures.md  04_TransformStructures.md  05_CameraStructures.md  06_Il2CppClass.md  07_UnityObjectNative.md  08_ManagedBackendAndManagedObject.md  09_GomAccessors.md  10_ObjectNativeGameObjectComponentTransform.md  11_MetadataStructures.md  12_Il2CppRegistrationStructures.md  13_GomListNode.md  14_GomPool.md  15_GomBucket.md  16_GomWalkerTypes.md  17_GomSearchCommon.md  18_NativeComponent.md  19_NativeScriptableObjectName.md  20_MetadataImages.md  21_MetadataMethods.md  22_MetadataStrings.md  23_HintStruct.md  24_RegistrationTypes.md
libs/unity6/include/er6/core/: types.hpp
libs/unity6/include/er6/mem/: memory_accessor.hpp  memory_read.hpp
libs/unity6/include/er6/os/win/: win_memory_accessor.hpp  win_module.hpp  win_path.hpp  win_process.hpp  win_window.hpp
libs/unity6/include/er6/unity6/: init.hpp
libs/unity6/include/er6/unity6/camera/: camera.hpp  world_to_screen.hpp
libs/unity6/include/er6/unity6/core/: offsets.hpp  validate_offsets.hpp
libs/unity6/include/er6/unity6/dumpsdk/: sdk_common.hpp  sdk_dump_cs.hpp  sdk_generic_json.hpp  sdk_metadata_helpers.hpp  sdk_registration.hpp  sdk_runner.hpp  sdk_strings.hpp  sdk_type_resolver.hpp
libs/unity6/include/er6/unity6/gom/: gom_bucket.hpp  gom_hash_calc.hpp  gom_list_node.hpp  gom_manager.hpp  gom_offsets.hpp  gom_pool.hpp  gom_scan.hpp  gom_scan_validate.hpp  gom_search_common.hpp  gom_search_component.hpp  gom_search_game_object.hpp  gom_walker.hpp  gom_walker_types.hpp
libs/unity6/include/er6/unity6/init/: bones.hpp  camera.hpp  component.hpp  context.hpp  dumpsdk.hpp  gom.hpp  metadata.hpp  msid.hpp  object.hpp  transform.hpp  w2s.hpp
libs/unity6/include/er6/unity6/metadata/: codegen_modules.hpp  export.hpp  header_parser.hpp  hint_export.hpp  hint_json.hpp  hint_struct.hpp  metadata_header_fields.hpp  metadata_images.hpp  metadata_methods.hpp  metadata_strings.hpp  method_resolver.hpp  pe.hpp  registration_helpers.hpp  registration_scanner.hpp  registration_scanner_code.hpp  registration_scanner_meta.hpp  registration_types.hpp  scanner_pointer.hpp
scripts/: pack_web_assets.cmake
src/: Application.h  DataStore.h  Keybind.h  main.cpp
src/datastore/: EntityState.h  GameState.h  MapState.h  PlayerState.h  PortalState.h
src/features/: LineOfSight.h  PortalPlanner.h  RedirectionHelper.h
src/memory/: CachedEntity.h  Field.h  Memory.h  MemoryEntity.h  MemoryUtils.h  Offsets.h  UnityTypes.h
src/memory/unity/: Il2CppList.h  Il2CppMap.h  Il2CppObject.h  Il2CppString.h  ManagedMap.h  ManagedString.h  MonoBehaviour.h  NativeComponent.h  ScriptableObject.h  UnityTypes.h
src/overlay/: Renderer.h  WebViewPanel.h
src/overlay/assets/: app.js  i18n.js  index.html  style.css
src/overlay/assets/tabs/: debug.html  overlay.html  settings.html
src/overlay/components/: BackgroundRenderer.h  GridRenderer.h  LosRenderer.h  PortalRenderer.h  RenderContext.h
src/shared/: AppLogger.h  Config.h  PeriodicAsyncTimer.h  Process.h  TimeElapsedScopeLogger.h  Utils.h  Version.h.in
src/types/: ClientCellData.h  ClientMapData.h  DataService.h  Entity.h  FightService.h  Glyph.h  GraphicCell.h  GridGenerator.h  InteractiveCellManager.h  LocalPlayerHud.h  LocalPlayerService.h  LocalPlayerSummary.h  MapInformationData.h  MapMetadata.h  MapRenderer.h
src/types/enums/: BreedEnum.h  EntityType.h
src/utilities/: ModuleSignature.h  SingleInstance.h  StealthName.h  Updater.h
(+17 files in other folders)
